0.x.y (dd-MMM-yy):
 - feature: update code to be mypy-0.501 compatiable
 - fix: ChangeLog parsing for cran:
   - gss
   - tseries

0.1.4 (26-Jan-17):
 - feature: report change log.
 - fix: allow default types in MakeDict of None (fixes loading of tseries).

0.1.3 (20-Dec-16):
 - feature: add placeholder for 'pkgconfig' uses.
 - feature: add partial implementation for ShebangFix (loading and generating).
 - refactor: allow Uses to be created via string.
 - refactor: move loading for Makefile into respective classes.
 - fix: updating portdir after changing category / name.
 - fix: correctly set NO_ARCH for non-compiling packages,
 - fix: allow uses to generate() (i.e. output variables).
 - fix: make(1) variable expansion.
 - fix: added LICENSE_FILE to PortLicense.
 - fix: fall back to normal Port if CranPort cannot be loaded.
 - fix: handle None pkgnameprefix.
 - fix: remove pkg-plist if present.

0.1.2 (15-Sep-16):
 - fix: loading LIB_DEPENDS.

0.1.1 (30-Aug-16):
 - fix: Makefile generation with empty section (i.e. dependencies).
 - fix: return unset port variable as None.

0.1.0 (25-Aug-16):
 - Initial release.