@@ -1,5 +1,6 @@
 0.x.y (dd-MMM-yy):
  - feature: update code to be mypy-0.501 compatiable
+ - refactor: move CranPort creating code from portcran to cran/Ports
  - fix: ChangeLog parsing for cran:
    - gss
    - tseries
